--- a/GitHub User Profile/Base.lproj/Main.storyboard
+++ b/GitHub User Profile/Base.lproj/Main.storyboard
@@ -304,6 +304,7 @@
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbP-UW-Cnb">
                                                     <rect key="frame" x="8" y="8" width="584" height="28"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="textColor" red="0.40972608327865601" green="0.40971383452415466" blue="0.409720778465271" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                     <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES"/>
@@ -320,7 +321,7 @@
                                             <outlet property="descriptionTextView" destination="gbP-UW-Cnb" id="QFS-W5-yJK"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="repoBranchesCell" rowHeight="60" id="UBK-eW-2uP" customClass="RepoBranchesTableViewCell" customModule="GitHub_User_Profile" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="RepoDetailPartCell" rowHeight="60" id="UBK-eW-2uP" customClass="RepoDetailPartTableViewCell" customModule="GitHub_User_Profile" customModuleProvider="target">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UBK-eW-2uP" id="uxo-nC-DpT">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -342,9 +343,9 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j5l-Q1-aN9">
-                                                    <rect key="frame" x="38" y="34" width="124" height="28"/>
+                                                    <rect key="frame" x="38" y="34" width="63" height="28"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                    <state key="normal" title="View More Branches">
+                                                    <state key="normal" title="View More">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
@@ -371,8 +372,9 @@
                                             </variation>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="branchIcon" destination="9np-if-sk1" id="yJf-sQ-zX6"/>
-                                            <outlet property="branchLabel" destination="Zr1-L5-pDx" id="XAX-Ti-AvI"/>
+                                            <outlet property="detailButton" destination="j5l-Q1-aN9" id="qKz-Ys-3AT"/>
+                                            <outlet property="detailIcon" destination="9np-if-sk1" id="WAI-FR-CuQ"/>
+                                            <outlet property="detailLabel" destination="Zr1-L5-pDx" id="7I2-Js-1Re"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -381,29 +383,17 @@
                                     <outlet property="delegate" destination="Rgo-TM-v2h" id="0Ng-km-hzh"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pP7-WK-CRb">
-                                <rect key="frame" x="238" y="550" width="125" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="125" id="1f1-BY-w5U"/>
-                                    <constraint firstAttribute="height" constant="30" id="Vnz-YH-iXb"/>
-                                </constraints>
-                                <state key="normal" title="View On GitHub">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="pP7-WK-CRb" secondAttribute="centerX" id="6fB-JD-dWW"/>
                             <constraint firstAttribute="trailing" secondItem="fNw-Av-7AZ" secondAttribute="trailing" id="7GM-34-IYA"/>
                             <constraint firstItem="xR1-ay-2Yh" firstAttribute="top" secondItem="fNw-Av-7AZ" secondAttribute="bottom" id="EcM-vL-0ya"/>
                             <constraint firstItem="fNw-Av-7AZ" firstAttribute="top" secondItem="1W7-Y8-Suc" secondAttribute="top" id="Ubb-rw-3ex"/>
-                            <constraint firstItem="xR1-ay-2Yh" firstAttribute="top" secondItem="pP7-WK-CRb" secondAttribute="bottom" constant="20" id="ogW-T1-JI4"/>
                             <constraint firstItem="fNw-Av-7AZ" firstAttribute="leading" secondItem="1W7-Y8-Suc" secondAttribute="leading" id="wIy-M4-UzP"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="QXq-FC-T3y">
-                        <barButtonItem key="rightBarButtonItem" title="View On Github" id="1Zq-TV-9qW">
+                        <barButtonItem key="rightBarButtonItem" title="github.com" id="1Zq-TV-9qW">
                             <connections>
                                 <action selector="viewOnGitHubAction:" destination="Rgo-TM-v2h" id="XL1-db-0Q4"/>
                             </connections>
